# hmk_opengl

./: .clang-format  .doxy  .gitignore  .tokeignore  CMakeLists.txt  test.cxx
cmake/: FindStb.cmake  Findassimp.cmake  Findfmt.cmake  Findglad.cmake  Findglfw3.cmake  Findglm.cmake  Findspdlog.cmake
cmake/glad/include/glad/: glad.h
cmake/glad/src/: glad.c
examples/: CMakeLists.txt  use_text.cxx
examples/basic_testings/: CMakeLists.txt  hello_triangle.cxx  move_triangle.cxx  mycube.cxx  mycube.hxx  shader3.fs  shader3.gs  shader3.vs  test_lighting.cxx  use_text.cxx
examples/frame_test/: CMakeLists.txt  display_arguments.cxx  load_model.cxx  paste_tex.cxx  shader_model.fs  shader_model.vs  test_button.cxx  wview.cxx
examples/hmk4/: CMakeLists.txt  cabin2.glb  defr_cabin.fs  defr_draw.fs  defr_ground.fs  defr_ground.vs  defr_turbn.fs  defr_turbn.vs  defr_vis.fs  hmk4_config.hxx  model_cloud.cxx  model_cloud.hxx  model_ground.cxx  model_ground.hxx  model_windgen.cxx  model_windgen.hxx  node3.glb  scene_pipeline.cxx  scene_pipeline.hxx  shadow_mapping.vs  test_model_ground.cxx  test_model_windgen.cxx
examples/ray_marching/: CMakeLists.txt  readme.md  shader_vcloud.fs  shader_vcloud.vs  tmp.fs  vcloud.cxx
examples/scene_render/: CMakeLists.txt  defer_render_test.cxx  ground.cxx  ground.fs  ground.vs  readme.md  shader_defr.fs  shader_defr.vs  shader_depth_viz.fs  shader_depth_viz.vs  shader_scr.fs  shader_scr.vs  shadow.vs
framework/: CMakeLists.txt  button.cxx  button.hxx  drawable_frame.cxx  drawable_frame.hxx  sizer.cxx  sizer.hxx  textedit.cxx  textedit.hxx  utils.hxx  widget.cxx  widget.hxx  window.cxx  window.hxx  world_view.cxx  world_view.hxx
gl/: CMakeLists.txt  buffer_objects.cxx  buffer_objects.hxx  checkfail.hxx  debug_struct.hxx  glfw_inst.cxx  glfw_inst.hxx  shader.cxx  shader.hxx  shader_program.cxx  shader_program.hxx  texture_objects.cxx  texture_objects.hxx
impl/: CMakeLists.txt  stb_perlin_impl.cxx
model/: CMakeLIsts.txt  mesh.cxx  mesh.hxx  model.cxx  model.hxx  readme.md
procedural/: CMakeLists.txt  parameter_dict.cxx  parameter_dict.hxx  perlin_noise.cxx  perlin_noise.hxx  types.hxx  volumetric_cloud.cxx  volumetric_cloud.hxx
utils/: config.hxx  types.hxx  utils.hxx
